build_errors.txt
🔧 Building obiprotocol...
src/core/obi_dfa_implementation.c: In function ‘obi_dfa_initialize’:
src/core/obi_dfa_implementation.c:59:27: error: invalid application of ‘sizeof’ to incomplete type ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   59 |     memset(dfa, 0, sizeof(obi_protocol_dfa_t));
      |                           ^~~~~~~~~~~~~~~~~~
src/core/obi_dfa_implementation.c:62:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   62 |     dfa->zero_trust_enforced = zero_trust_mode;
      |        ^~
src/core/obi_dfa_implementation.c:63:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   63 |     dfa->current_state = 0;
      |        ^~
src/core/obi_dfa_implementation.c:64:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   64 |     dfa->governance_cost_accumulator = 0.0;
      |        ^~
src/core/obi_dfa_implementation.c:67:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   67 |     dfa->uscn_context.case_sensitive = false;
      |        ^~
src/core/obi_dfa_implementation.c:68:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   68 |     dfa->uscn_context.whitespace_normalize = true;
      |        ^~
src/core/obi_dfa_implementation.c:69:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   69 |     dfa->uscn_context.encoding_normalize = true;
      |        ^~
src/core/obi_dfa_implementation.c:70:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   70 |     dfa->uscn_context.buffer_used = 0;
      |        ^~
src/core/obi_dfa_implementation.c:73:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   73 |     dfa->states[0].state_id = 0;
      |        ^~
src/core/obi_dfa_implementation.c:74:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   74 |     dfa->states[0].pattern_type = PATTERN_PROTOCOL_HEADER;
      |        ^~
src/core/obi_dfa_implementation.c:74:35: error: ‘PATTERN_PROTOCOL_HEADER’ undeclared (first use in this function)
   74 |     dfa->states[0].pattern_type = PATTERN_PROTOCOL_HEADER;
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~
src/core/obi_dfa_implementation.c:74:35: note: each undeclared identifier is reported only once for each function it appears in
src/core/obi_dfa_implementation.c:75:15: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   75 |     strcpy(dfa->states[0].regex_pattern, OBI_PATTERN_HEADER_MARKER);
      |               ^~
src/core/obi_dfa_implementation.c:76:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   76 |     dfa->states[0].is_accepting = false;
      |        ^~
src/core/obi_dfa_implementation.c:77:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   77 |     dfa->states[0].requires_zero_trust_validation = true;
      |        ^~
src/core/obi_dfa_implementation.c:78:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
   78 |     dfa->state_count = 1;
      |        ^~
src/core/obi_dfa_implementation.c: At top level:
src/core/obi_dfa_implementation.c:86:24: error: unknown type name ‘obi_uscn_context_t’; did you mean ‘obi_protocol_context_t’?
   86 | int obi_uscn_normalize(obi_uscn_context_t *ctx,
      |                        ^~~~~~~~~~~~~~~~~~
      |                        obi_protocol_context_t
src/core/obi_dfa_implementation.c:173:40: error: unknown type name ‘obi_uscn_context_t’; did you mean ‘obi_protocol_context_t’?
  173 |                                        obi_uscn_context_t *ctx) {
      |                                        ^~~~~~~~~~~~~~~~~~
      |                                        obi_protocol_context_t
src/core/obi_dfa_implementation.c:195:29: error: unknown type name ‘obi_semantic_pattern_t’
  195 |                             obi_semantic_pattern_t pattern_type,
      |                             ^~~~~~~~~~~~~~~~~~~~~~
src/core/obi_dfa_implementation.c:220:38: error: unknown type name ‘obi_semantic_pattern_t’
  220 |                                      obi_semantic_pattern_t pattern_type,
      |                                      ^~~~~~~~~~~~~~~~~~~~~~
src/core/obi_dfa_implementation.c: In function ‘obi_dfa_process_input’:
src/core/obi_dfa_implementation.c:273:26: error: ‘OBI_CANONICAL_BUFFER_SIZE’ undeclared (first use in this function)
  273 |     char canonical_input[OBI_CANONICAL_BUFFER_SIZE];
      |                          ^~~~~~~~~~~~~~~~~~~~~~~~~
src/core/obi_dfa_implementation.c:276:9: warning: implicit declaration of function ‘obi_uscn_normalize’ [-Wimplicit-function-declaration]
  276 |     if (obi_uscn_normalize(&dfa->uscn_context, input, input_length,
      |         ^~~~~~~~~~~~~~~~~~
src/core/obi_dfa_implementation.c:276:32: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
  276 |     if (obi_uscn_normalize(&dfa->uscn_context, input, input_length,
      |                                ^~
src/core/obi_dfa_implementation.c:291:37: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
  291 |         for (uint32_t i = 0; i < dfa->state_count; i++) {
      |                                     ^~
src/core/obi_dfa_implementation.c:292:13: error: unknown type name ‘obi_dfa_state_t’
  292 |             obi_dfa_state_t *state = &dfa->states[i];
      |             ^~~~~~~~~~~~~~~
src/core/obi_dfa_implementation.c:292:42: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
  292 |             obi_dfa_state_t *state = &dfa->states[i];
      |                                          ^~
src/core/obi_dfa_implementation.c:296:38: error: request for member ‘regex_pattern’ in something not a structure or union
  296 |             if (regcomp(&regex, state->regex_pattern, REG_EXTENDED) == 0) {
      |                                      ^~
src/core/obi_dfa_implementation.c:306:43: warning: implicit declaration of function ‘create_ir_node’ [-Wimplicit-function-declaration]
  306 |                     obi_ir_node_t *node = create_ir_node(
      |                                           ^~~~~~~~~~~~~~
src/core/obi_dfa_implementation.c:308:30: error: request for member ‘pattern_type’ in something not a structure or union
  308 |                         state->pattern_type,
      |                              ^~
src/core/obi_dfa_implementation.c:318:39: error: invalid use of incomplete typedef ‘obi_ir_node_t’ {aka ‘struct obi_ir_node’}
  318 |                             ir_current->next = node;
      |                                       ^~
src/core/obi_dfa_implementation.c:324:42: error: request for member ‘state_id’ in something not a structure or union
  324 |                     current_state = state->state_id;
      |                                          ^~
src/core/obi_dfa_implementation.c:325:24: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
  325 |                     dfa->governance_cost_accumulator += cost;
      |                        ^~
src/core/obi_dfa_implementation.c:340:8: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
  340 |     dfa->current_state = current_state;
      |        ^~
src/core/obi_dfa_implementation.c:273:10: warning: unused variable ‘canonical_input’ [-Wunused-variable]
  273 |     char canonical_input[OBI_CANONICAL_BUFFER_SIZE];
      |          ^~~~~~~~~~~~~~~
src/core/obi_dfa_implementation.c: In function ‘obi_calculate_governance_cost’:
src/core/obi_dfa_implementation.c:351:22: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
  351 |     double cost = dfa->governance_cost_accumulator;
      |                      ^~
src/core/obi_dfa_implementation.c:354:23: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
  354 |     cost += 0.01 * dfa->state_count;        // State complexity
      |                       ^~
src/core/obi_dfa_implementation.c:355:24: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
  355 |     cost += 0.005 * dfa->transition_count;  // Transition complexity
      |                        ^~
src/core/obi_dfa_implementation.c:358:12: error: invalid use of incomplete typedef ‘obi_protocol_dfa_t’ {aka ‘struct obi_protocol_dfa’}
  358 |     if (dfa->zero_trust_enforced) {
      |            ^~
src/core/obi_dfa_implementation.c: At top level:
src/core/obi_dfa_implementation.c:28:29: warning: ‘uscn_encoding_map’ defined but not used [-Wunused-const-variable=]
   28 | static const uscn_mapping_t uscn_encoding_map[] = {
      |                             ^~~~~~~~~~~~~~~~~
make: *** [Makefile:30: obj/core/obi_dfa_implementation.o] Error 1
